<resources>
    <string name="app_name">SmartFitness</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="presignup_patient_desc">I need a caregiver</string>
    <string name="presignup_caregiver_desc">I want a care job</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Mobile phone</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="signup">Sign up</string>
    <string name="caregiver">Caregiver</string>
    <string name="patient">Patient</string>
    <string name="login">Login</string>
    <string name="nric_fin">NRIC/FIN</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string-array name="language_list">
        <item>Mandarin</item>
        <item>English</item>
        <item>Malay</item>
        <item>Tamil</item>
        <item>Hokkien</item>
        <item>Teochew</item>
        <item>Cantonese</item>
        <item>Hakka</item>
    </string-array>

    <string-array name="location_list">
        <item>North</item>
        <item>South</item>
        <item>East</item>
        <item>West</item>
        <item>Central</item>
    </string-array>

    <string-array name="service_list">
        <item>Senior Care</item>
        <item>Junior Care</item>
        <item>Companionship</item>
        <item>Rehabilitation</item>
        <item>Household Prep</item>
        <item>Professional Health Care</item>
        <item>Meal Preparation</item>
        <item>Speech Therapy</item>
        <item>Wheelchair Bound Care</item>
    </string-array>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="rating_list">
        <item>1 star</item>
        <item>2 stars</item>
        <item>3 stars</item>
        <item>4 stars</item>
        <item>5 stars</item>
    </string-array>

    <string-array name="sort_by_option_list">
        <item>Highest rating</item>
        <item>Years of Experience</item>
        <item>Lowest Price</item>
    </string-array>

    <string name="wage_range_formatted_text">$ %1$s &#8212; %2$s</string>

    <plurals name="year_of_exp_plural">
        <item quantity="zero">No prior experience</item>
        <item quantity="one">1 year of experience</item>
        <item quantity="other">%d years of experience</item>
    </plurals>

    <plurals name="rating_plural">
        <item quantity="zero">No star</item>
        <item quantity="one">1 star</item>
        <item quantity="other">%f stars</item>
    </plurals>
</resources>